tests/scan/fixtures/validation/negative/clean_go_clean-middleware-lib/clean-middleware-lib.go
// Package clean-middleware-lib is a clean Go module.
package clean-middleware-lib

func Hello() string { return "hello" }
